fix classroom exitDialog z-index->11

--- a/src/Topxia/MobileBundleV2/Resources/public/main/css/ui.css
+++ b/src/Topxia/MobileBundleV2/Resources/public/main/css/ui.css
@@ -651,6 +651,10 @@ a {
   font-size: 18px ! important;
 }
 
+.ui-classroom.ui-course-tool {
+  z-index: 11;
+}
+
 /* ui-classroom */
 
 /* classroom-card */
